--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "Quinntyne Brown",
   "license": "MIT",
   "devDependencies": {
-    "awesome-typescript-loader": "^2.2.4",
+    "awesome-typescript-loader": "^3.0.0-beta.9",
     "lite-server": "^2.2.2",
     "reflect-metadata": "^0.1.8",
     "ts-loader": "0.8.2",
@@ -33,6 +33,7 @@
     "rome": "^2.1.22",
     "rxjs": "^5.0.0-rc.4",
     "sass-loader": "^4.0.2",
+    "typescript": "^2.1.4",
     "typings": "^1.5.0",
     "web-animations-js": "^2.2.2",
     "webcomponents": "^0.1.4"
