--- a/pagination.csproj
+++ b/pagination.csproj
@@ -25,7 +25,7 @@
     <UseGlobalApplicationHostFile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
-    <TypeScriptToolsVersion>2.0</TypeScriptToolsVersion>
+    <TypeScriptToolsVersion>2.1</TypeScriptToolsVersion>
     <TypeScriptEmitDecoratorMetadata>true</TypeScriptEmitDecoratorMetadata>
     <TypeScriptModuleKind>commonjs</TypeScriptModuleKind>
     <TypeScriptExperimentalDecorators>True</TypeScriptExperimentalDecorators>
@@ -82,17 +82,17 @@
     <Content Include="src\app\app.component.scss">
       <DependentUpon>app.component.ts</DependentUpon>
     </Content>
+    <Content Include="src\app\digital-assets\digital-asset-item.component.html">
+      <DependentUpon>digital-asset-item.component.ts</DependentUpon>
+    </Content>
+    <Content Include="src\app\digital-assets\digital-asset-item.component.scss">
+      <DependentUpon>digital-asset-item.component.ts</DependentUpon>
+    </Content>
     <Content Include="src\app\home\home.component.html">
       <DependentUpon>home.component.ts</DependentUpon>
     </Content>
     <Content Include="src\app\home\home.component.scss">
       <DependentUpon>home.component.ts</DependentUpon>
-    </Content>
-    <Content Include="src\app\pagination\paginated.component.html">
-      <DependentUpon>paginated.component.ts</DependentUpon>
-    </Content>
-    <Content Include="src\app\pagination\paginated.component.scss">
-      <DependentUpon>paginated.component.ts</DependentUpon>
     </Content>
     <Content Include="src\app\shared\footer.component.html">
       <DependentUpon>footer.component.ts</DependentUpon>
@@ -201,6 +201,9 @@
     <TypeScriptCompile Include="src\app\pagination\paginated.component.ts" />
     <TypeScriptCompile Include="src\app\avatars\avatar.service.ts" />
     <TypeScriptCompile Include="src\app\avatars\index.ts" />
+    <TypeScriptCompile Include="src\app\digital-assets\index.ts" />
+    <TypeScriptCompile Include="src\app\digital-assets\digital-asset.model.ts" />
+    <TypeScriptCompile Include="src\app\digital-assets\digital-asset-item.component.ts" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
