--- a/package.json
+++ b/package.json
@@ -10,32 +10,20 @@
   "license": "MIT",
   "devDependencies": {
     "awesome-typescript-loader": "^3.0.0-beta.9",
-    "lite-server": "^2.2.2",
-    "reflect-metadata": "^0.1.8",
     "ts-loader": "0.8.2",
-    "typescript": "2.0.3",
-    "typings": "1.3.2",
+    "typescript": "^2.1.4",
     "uglify-loader": "^1.3.0",
     "webpack": "^2.1.0-beta.21"
   },
   "dependencies": {
-    "@types/reflect-metadata": "0.0.5",
-    "@webcomponents/custom-elements": "^1.0.0-alpha.3",
-    "aurelia-binding": "^1.0.9",
+    "@angular/core": "^2.4.1",
     "core-js": "^2.4.1",
-    "handlebars": "^4.0.5",
     "html-loader": "^0.4.4",
-    "moment": "^2.16.0",
     "node-sass": "^3.10.1",
-    "pikaday": "^1.5.1",
-    "ractive": "^0.8.3",
     "raw-loader": "^0.5.1",
-    "rome": "^2.1.22",
-    "rxjs": "^5.0.0-rc.4",
+    "reflect-metadata": "^0.1.9",
+    "rxjs": "^5.0.2",
     "sass-loader": "^4.0.2",
-    "typescript": "^2.1.4",
-    "typings": "^1.5.0",
-    "web-animations-js": "^2.2.2",
-    "webcomponents": "^0.1.4"
+    "zone.js": "^0.7.4"
   }
 }
