clean up and bug fix

--- a/pagination.csproj
+++ b/pagination.csproj
@@ -139,7 +139,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <TypeScriptCompile Include="src\types.ts" />
+    <TypeScriptCompile Include="src\token-registry.ts" />
     <TypeScriptCompile Include="src\container.ts" />
     <TypeScriptCompile Include="src\app\app-router-outlet.component.ts" />
     <TypeScriptCompile Include="src\app\environment.ts" />
