--- a/pagination.csproj
+++ b/pagination.csproj
@@ -140,7 +140,7 @@
   </ItemGroup>
   <ItemGroup>
     <TypeScriptCompile Include="src\token-registry.ts" />
-    <TypeScriptCompile Include="src\container.ts" />
+    <TypeScriptCompile Include="src\ioc-container.ts" />
     <TypeScriptCompile Include="src\app\app-router-outlet.component.ts" />
     <TypeScriptCompile Include="src\app\environment.ts" />
     <TypeScriptCompile Include="src\app\pagination\index.ts" />
