--- a/pagination.csproj
+++ b/pagination.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <TypeScriptCompile Include="src\app\utilities\store.ts" />
     <TypeScriptCompile Include="src\token-registry.ts" />
     <TypeScriptCompile Include="src\ioc-container.ts" />
     <TypeScriptCompile Include="src\app\app-router-outlet.component.ts" />
