--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "webpack": "^2.1.0-beta.21"
   },
   "dependencies": {
-    "@angular/core": "^2.4.1",
     "core-js": "^2.4.1",
+    "injection-js": "^1.0.0",
     "reflect-metadata": "^0.1.9",
     "rxjs": "^5.0.2",
     "sass-loader": "^4.0.2",
