--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
   "license": "MIT",
   "devDependencies": {
     "awesome-typescript-loader": "^3.0.0-beta.9",
-    "ts-loader": "0.8.2",
-    "typescript": "^2.1.4",
-    "uglify-loader": "^1.3.0",
+    "babili-webpack-plugin": "0.0.8",
     "html-loader": "^0.4.4",
     "node-sass": "^3.10.1",
     "raw-loader": "^0.5.1",
-    "webpack": "^2.1.0-beta.21"
+    "ts-loader": "0.8.2",
+    "typescript": "^2.1.4",
+    "uglify-loader": "^1.3.0",
+    "webpack": "^2.2.0-rc.2"
   },
   "dependencies": {
     "core-js": "^2.4.1",
