--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,23 @@
 {
+  "compileOnSave": false,
+  "buildOnSave": false,
   "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
+    "target": "es2015",
+    "module": "es2015",
+    "moduleResolution": "node",
+    "removeComments": true,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "types": [ ]
   },
-  "exclude": [
-    "node_modules",
-    "typings/main.d.ts",
-    "typings/main"
-  ],
   "filesGlob": [
     "./src/**/*.ts",
-    "./spec/**/*.ts",
-    "!./node_modules/**/*.ts",
     "src/custom-typings.d.ts",
     "typings/index.d.ts"
   ],
-  "awesomeTypescriptLoaderOptions": {
-    "resolveGlobs": true,
-    "forkChecker": true
-  },
-  "compileOnSave": false,
-  "buildOnSave": false,
-  "atom": { "rewriteTsconfig": false }
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
