--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "babili-webpack-plugin": "0.0.8",
     "html-loader": "^0.4.4",
     "node-sass": "^3.10.1",
+    "offline-plugin": "^4.6.1",
     "raw-loader": "^0.5.1",
     "ts-loader": "0.8.2",
-    "typescript": "^2.1.4",
+    "typescript": "^2.2.0",
     "uglify-loader": "^1.3.0",
     "webpack": "^2.2.0-rc.2"
   },
