--- a/pagination.csproj
+++ b/pagination.csproj
@@ -74,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="index.html" />
+    <Content Include="libs\native-shim.js" />
     <Content Include="packages.config" />
     <Content Include=".gitignore" />
     <Content Include="package.json" />
