--- a/pagination.csproj
+++ b/pagination.csproj
@@ -142,7 +142,7 @@
   <ItemGroup>
     <TypeScriptCompile Include="src\app\utilities\constructor.ts" />
     <TypeScriptCompile Include="src\app\utilities\store.ts" />
-    <TypeScriptCompile Include="src\service-collection.ts" />
+    <TypeScriptCompile Include="src\create-ioc-container.ts" />
     <TypeScriptCompile Include="src\container.ts" />
     <TypeScriptCompile Include="src\app\app-router-outlet.component.ts" />
     <TypeScriptCompile Include="src\app\environment.ts" />
