--- a/package.json
+++ b/package.json
@@ -9,24 +9,28 @@
   "author": "Quinntyne Brown",
   "license": "MIT",
   "devDependencies": {
-    "awesome-typescript-loader": "^3.0.0-beta.9",
+    "@types/node": "7.0.29",
+    "awesome-typescript-loader": "3.2.3",
     "babili-webpack-plugin": "0.0.8",
-    "html-loader": "^0.4.4",
-    "node-sass": "^3.10.1",
-    "offline-plugin": "^4.6.1",
-    "raw-loader": "^0.5.1",
+    "html-loader": "0.4.4",
+    "node-sass": "3.10.1",
+    "offline-plugin": "4.6.1",
+    "raw-loader": "0.5.1",
     "ts-loader": "0.8.2",
-    "typescript": "^2.3.4",
-    "uglify-loader": "^1.3.0",
-    "webpack": "^2.2.0-rc.2"
+    "typescript": "2.5.2",
+    "uglify-loader": "1.3.0",
+    "webpack": "3.5.5"
   },
   "dependencies": {
-    "@webcomponents/custom-elements": "^1.0.0-alpha.3",
+    "@webcomponents/custom-elements": "1.0.0",
     "core-js": "^2.4.1",
     "injection-js": "^1.0.0",
+    "live-server": "^1.2.0",
     "reflect-metadata": "^0.1.9",
-    "rxjs": "^5.0.2",
+    "rxjs": "5.4.3",
     "sass-loader": "^4.0.2",
+    "typescript": "^2.5.2",
+    "typings": "^2.1.1",
     "webcomponents.js": "^0.7.24",
     "zone.js": "^0.7.4"
   }
