--- a/pagination.csproj
+++ b/pagination.csproj
@@ -31,6 +31,7 @@
     <TypeScriptExperimentalDecorators>True</TypeScriptExperimentalDecorators>
     <TypeScritModuleResolution>Classic</TypeScritModuleResolution>
     <TypeScriptCompileBlocked>true</TypeScriptCompileBlocked>
+    <Use64BitIISExpress />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -122,7 +123,6 @@
     <None Include="src\styles\_breakpoints.scss" />
     <None Include="src\styles\_variables.scss" />
     <Content Include="tsconfig.json" />
-    <Content Include="typings.json" />
     <Content Include="src\app\pagination\paged-list.scss" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
