--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "core-js": "^2.4.1",
     "electron": "^1.7.6",
     "injection-js": "2.1.0",
+    "lit-html": "0.7.1",
     "live-server": "^1.2.0",
     "reflect-metadata": "^0.1.9",
-    "rxjs": "5.4.3",
+    "rxjs": "^5.4.3",
     "typescript": "^2.5.2",
     "typings": "^2.1.1",
     "webcomponents.js": "^0.7.24",
